--- a/content/2019-02-12-aws_ac_web_01.md
+++ b/content/2019-02-12-aws_ac_web_01.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: AWS 아키텍처 - Web Application Hosting 1
+title: AWS 아키텍처 - Web Application Hosting_01
 date: '2019-02-12'
-path: '/blog/2019-02-12-aws_ac_web'
+path: '/blog/2019-02-12-aws_ac_web_01'
 tags: aws_ac
 ---
 
