--- a/content/2019-03-11-resume.md
+++ b/content/2019-03-11-resume.md
@@ -1,59 +1,47 @@
 ---
 layout: post
-title: 2019 02, 필자 소개
-date: '2019-02-11'
-path: '/blog/2019-02-11-resume'
+title: 2019.03의 RESUME
+date: '2019-03-11'
+path: '/blog/2019-03-11-resume'
 tags: resume
 ---
 
-# 간략 필자 소개 - for Korean
-
-[뒤로가기](/README.md)
-
-[![HitCount](http://hits.dwyl.io/rayleighko/training/resume.svg)](http://hits.dwyl.io/rayleighko/training/resume)
-
-<a href="https://sourcerer.io/rayleighko"><img src="https://avatars2.githubusercontent.com/u/24822072?v=4" height="50px" width="50px" alt=""/></a>
-
-[Sourcerer profile](https://sourcerer.io/rayleighko)
+# 2019. 03의 RESUME
 
 #### 좌우명: [평생학습(Lifelong learning)](https://en.wikipedia.org/wiki/Lifelong_learning), [민이호학 불치하문(敏而好學 不恥下問)](https://bit.ly/2E22Als)
 
 개발이라는 분야만이 아닌 서비스 구현의 전반적인 워크 플로우를 공부하는 프로그래머가 되고자 합니다. 이를 위해 더나은 경험을 추구하며, 기술적으로 성장하는 것을 좋아합니다. 더불어 모든 일은 체계적으로 하거나, 다양한 의견을 수용해 최적의 결과를 만들 때 가장 큰 성취감을 느끼곤 합니다.
 
-현재는 학업에 집중하고자 NineVR이라는 VR 스타트업에서 퇴사하고, 가벼운 프로젝트를 만들며 다음 학기를 준비하고 있습니다(2020. 2 졸업 예정).
+
 
 > 최근 사용한 언어 및 라이브러리: Node, Javascript(React, Redux, etc.), CSS3(SCSS, StyledComponents), HTML5(JSX)
 
+
+
 제가 추구하는 성향의 개발자는 Development만이 아닌 Operation까지도 생각하는 개발자이기 때문에 그에 따른 다양한 툴과 언어를 편식없이 학습하고 있습니다.
 
-최근(2018. 12 ~ 2019. 02)에는 가장 활발한 발전을 이루고 있다고 생각되는 Javascript에 매력을 느껴 이를 이용하여 React를 활용한 [프로젝트1](https://github.com/teamthesol/boggler)과 Node를 활용한 [프로젝트 2](https://github.com/teamthesol/node-DeepSpeech)를 진행했습니다.
+최근에는 가장 활발한 발전을 이루고 있는 웹 프론트엔드에 매력을 느껴 이를 이용하여 React를 활용한 [프로젝트1](https://github.com/teamthesol/boggler)과 Node를 활용한 [프로젝트 2](https://github.com/teamthesol/node-DeepSpeech)를 진행했습니다.
 
-이와는 별개로 [머신러닝 스터디(2018. 06)](https://github.com/rayleighko/ml_study)를 진행하며 머신러닝에 대해서도 관심이 있습니다.
+
 
 > 선호하는 개발 환경: MacOS(Zsh, Bash), Linux(Ubuntu), Opensource  
 > 선호하는 도구: AWS, React, Node  
 > 최근 관심있는 도구: CI(TravisCI, CircleCI 등), Container(Docker, Kubernetes)
 
-이렇게 다양한 도구를 사용하고, 이것저것 공부하는 이유는 제가 생각하는 개발자라는 직업은 배움을 게을리하지 않고, 무언가를 만들기 위해 다양한 경험을 해야 한다고 생각하기 때문입니다. 그래서 때로는 잡다하게 공부했다는 생각이 들 때가 있었습니다. 하지만 그 생각도 잠시 배움을 즐기고 있는 저 자신의 모습이 행복하기 때문에 지금까지, 그리고 앞으로도 후회없이 다양한 기술을 학습하고자 합니다.
 
-## 직무 관련 주제 별 활동 정리
 
-### 참여한 재능기부 및 대외활동
+이렇게 다양한 도구를 사용하고, 이것저것 공부하는 이유는 제가 생각하는 개발자라는 직업은 배움을 게을리하지 않고, 무언가를 만들기 위해 다양한 경험을 해야 한다고 생각하기 때문입니다. 그래서 때로는 잡다하게 공부했다는 생각이 들 때가 있었습니다.
 
-**2013. 07. 01 ~ 2013. 07. 15**: 말레이시아 IT 봉사단 'Comma' - IT STAFF  
-**2017. 02. 27 ~ 2017. 05. 29**: 스타트업캠퍼스, Signature Course 2nd - Tech Lab(개발자)  
-**2017. 05. 23**: 5월, 소프트웨어에 물들다 - 의정부 어린이도서관(STAFF)  
-**2017. 12. 27**: DevOps Korea meetup - STAFF  
-**2018. 01. 29 ~ 2018. 03. 16**: 평창 Olympic/Pralympic - Passion Craw(IT STAFF)
+하지만 그 생각도 잠시 배움을 즐기고 있는 저 자신의 모습이 행복하기 때문에 지금까지, 그리고 앞으로도 후회없이 다양한 기술을 학습하고자 합니다.
+
+
+
+### 참여 중인 대외활동
 
 **2018. 04. 01 ~ 현재**: Djangogirls Seoul - Organizer  
 **2018. 08. 12 ~ 현재**: AWS(KRUG) University Student Group - Member
 
-### 근무 및 아르바이트 경력
 
-**2017. 04. ~ 2017. 08**: 프로젝트 HongU - Web Software Developer  
-**2017. 06. ~ 2017. 10. 13**: 패스트캠퍼스 - OpenCV와 함께하는 컴퓨터 비전 캠프 조교  
-**2018. 08. 20 ~ 11. 20**: 나인브이알 - (Contents) Software Engineer<UE4을 활용한 클라이언트 게임 개발 및 사내 개발 인프라 관리>
 
 ### 공모전 및 수상 경력
 
@@ -61,20 +49,25 @@ tags: resume
 **2018. 08. 16 ~ 10. 25**: (공식) 컨트리뷰톤, gitShare – 오픈소스 Contributor, 우수상(2등)  
 **2019. 01. 08 ~ 02. 27**: (공식) 네이버 D2 CAMPUS FEST, boggler – 오픈소스 Maintainer로써 결승 진출
 
-### 입영기록
 
-**2014. 02. 25 ~ 2015. 11. 24**: 대한민국 해병대(1사단) - 네트워크 관리/운용병, 전산/체계 관리/운용병
 
-### 보유 자격증
+### 근무 이력
 
-**2017. 12. 24**: DAsP(데이터아키텍처 준전문가) - 데이터진흥원  
-**2017. 12. 23**: 리눅스마스터 2급 - 한국정보통신진흥협회
+**2017. 03. 04 ~ 08. 11**: 홍구 - 기술 담당, 공동 창업 및 웹 개발 담당(DJANGO)
+
+**2018. 08. 20 ~ 11. 20**: 나인브이알 - 컨텐츠 소프트웨어 엔지니어, PC 기반 게임 개발 및 웹 개발 담당(PHP, JQUERY), 스타팅 멤버
+
+**2019. 03. 04 ~ 06. 21**: 위플래닛 - 웹 프론트엔드 인턴, 웹 프론트엔드 개발 담당(React - NextJS, Redux-Form)
+
+
 
 ## 최근에 진행한 프로젝트 3개(맡은 역할, 인원 수, 기간, 내용 등)
 
-### 2018. 04. 01 ~ 2018. 11. 21: 강의 공유 플랫폼, Athena v1.0.0(4명) - Front-end(일부), Back-end(일부)
+### 2018. 04. 01 ~ 2018. 11. 21: 강의 공유 플랫폼, 오픈 소스(4명) - Front-end(일부), Back-end(일부)
 
 > 사용한 도구: React(Mobx), Node(Express, SocketIO), AWS(EC2, Route53, RDS), Git(GitKraken, Gitlab)
+
+
 
 이번 프로젝트의 시작은 수강했던 강의의 한 학생의 불편함이었습니다. 그 학생은 장애를 가지고 있어 수업을 듣기 위해서는 누군가의 도움이 필요했고, 그 도움조차 그 학생의 학습을 완벽히 도울 수는 없었습니다.
 
@@ -89,9 +82,13 @@ tags: resume
 **프로젝트 소스코드 주소**: https://github.com/rayleighChild/athena  
 **진행 간 부족한 점 피드백**: https://github.com/rayleighChild/athena_FAQ
 
-### 2018. 12. 26 ~ 2019. 02. 20: 음성인식 기반 메모 플랫폼, Boggler v1.0.0(3명) - Front-end(주도), Design(주도)
+
+
+### 2018. 12. 26 ~ 2019. 02. 20: 음성인식 기반 메모 플랫폼, 오픈 소스(3명) - Front-end(주도), Design(주도)
 
 > 사용한 도구: React(Redux, ...), Node(Express, ...), Git(GitKraken, GitHub, Git-Bash, ...), Editor(VSCode), Mozilla/DeepSpeech 등 여러 오픈소스 프로젝트 참고
+
+
 
 보글러의 가장 큰 핵심은 스트리밍 혹은 파일로 입력받은 음성 정보를 분석해 이를 텍스트로 변환시킨다는 점입니다. 가령 미팅에서의 가벼운 대화 혹은 강연자의 음성을 텍스트로 변환해 보다 나은 필사(글을 옮겨 적는) 환경을 제공합니다.
 
@@ -105,23 +102,31 @@ tags: resume
 
 이를 통해 프로젝트를 진행하기 전에는 마냥 트랜드를 따라 개발하는 것이 옳은 줄 알았지만, 사실은 기본에 충실해 기능과 구현에 적절한 기술을 사용하는 것이 옳다는 것을 깨닳았고 기본에 충실해야 좋은 서비스를 만들 수 있다는 것을 알게 되었습니다.
 
-**프로젝트 주소**: https://github.com/rayleighChild/boggler - 현재 진행 중.
+**프로젝트 주소**: https://github.com/rayleighChild/boggler
 
-### 2018. 01. 23 ~ 01. 28: Mozilla/DeepSpeech 기반 Nodejs 함수 Node Packcage(2명) - 프로젝트 설계 및 주도
+
+
+### 2018. 01. 23 ~ 01. 28: Mozilla/DeepSpeech 기반 Node Packcage, 오픈 소스(2명) - 프로젝트 설계 및 주도
 
 > 사용한 도구: Node, Mozilla/DeepSpeech
+
+
 
 앞서 설명한 보글러에서 편하게 사용하기 위해 오픈 소스 기반 Speech Recognition(음성 인식) 서비스인 Mozilla/DeepSpeech의 기능을 Node 모듈로 만든 프로젝트입니다. 또한, 기존의 Mozilla/DeepSpeech에서 제공하는 NPM 모듈이 있었지만 터미널 기반으로 사용해야 했기에 이를 코드로 사용하면 좋겠다고 생각해 진행하게 되었습니다.
 
 해당 프로젝트를 진행하면서 처음으로 package에 대한 전 과정을 설계, 구현했기 때문에 Node Package 퍼블리싱 경험을 통해 사용자의 피드백을 받을 수 있었으며, 사용자로부터의 요구사항에 맞게 프로젝트의 기능을 수정했던 경험이 기억에 남습니다. 가령 사용자의 요구였던 동기적으로 함수가 호출되어 결과를 반환하는 방식을 체택한 사례(https://github.com/teamthesol/node-DeepSpeech/issues/2)는 개인 프로젝트로 진행하는 것과는 또다른 경험을 얻을 수 있는 계기가 되었습니다.
 
-**현 기준(2019. 02. 17) 총 다운로드 수: 931회**
+**현 기준(2019. 03. 11) 총 다운로드 수: 990회**
 
 **프로젝트 주소**:　https://github.com/teamthesol/node-DeepSpeech
+
+
 
 ## 가장 기억에 남는 문제 해결 사례 소개
 
 ### 1. 기능 구현 - 비동기적으로 구현되어 있는 함수를 동기적으로 구현하기 위해 수정한 사례
+
+
 
 #### 문제 정의
 
@@ -144,7 +149,11 @@ tags: resume
 **해결된 문제 링크**
 : https://github.com/teamthesol/node-DeepSpeech/commit/f6d56fc853abcb3cf85737ba04615ee8264867df
 
+
+
 ### 2. FrontEnd - 오디오 파일 분석을 통한 기능 구현 및 스타일링 사례
+
+
 
 #### 문제 정의
 
@@ -188,6 +197,8 @@ tags: resume
 - 스타일링: https://github.com/teamthesol/boggler/commit/09aaa346b5202fbdb519c2e239e327c564b2ee50
 - 스타일링: https://github.com/teamthesol/boggler/commit/38712adcb82b7ab4a623c521760c0d822668f148
 
+
+
 #### 기타 내용
 
 ```
@@ -198,3 +209,4 @@ Djangogirls, seoul: https://djangogirls.org/seoul/  
 AUSG: https://www.facebook.com/AUSG-311547172765852/
 Facebook page: https://www.facebook.com/RaykoDev
 ```
+
