--- a/content/2019-02-27-aws_ac_web_03.md
+++ b/content/2019-02-27-aws_ac_web_03.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: AWS 아키텍처 - Web Application Hosting 3
+title: AWS 아키텍처 - Web Application Hosting_03
 date: '2019-02-27'
-path: '/blog/2019-02-27-aws_ac_web_2'
+path: '/blog/2019-02-27-aws_ac_web_03'
 tags: aws_ac
 ---
 
